# SyncDB

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  conftest.py  publish.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.ps1
.githooks/: pre-push
.github/workflows/: ci.yml  publish.yml
Current/: SYNCDB_LIBRARY_DESCRIPTION.md  local_mssql.py  mssql_local.py  mssql_postgresql.py
DevOps/DataBase/: README.md  docker-compose.yml
DevOps/DataBase/seed/mysql/: 001_seed.sql
Tests/: README.md  docker-compose.yml
Tests/DataBase/: README.md  docker-compose.yml
Tests/DataBase/images/cloudbeaver/: Dockerfile
Tests/DataBase/images/data-check/: Dockerfile  check_data.py  requirements.txt
Tests/DataBase/images/pgadmin/: Dockerfile
Tests/DataBase/seed/mssql/: init.sh  seed.sql
Tests/DataBase/seed/mysql/: 001_seed.sql
Tests/DataBase/seed/postgres/: 001_seed.sql
Tests/Pipelines/: Manual.ipynb
Tests/images/cloudbeaver/: Dockerfile
Tests/images/mssql/: Dockerfile
Tests/images/mssql-tools/: Dockerfile
Tests/images/mysql/: Dockerfile
Tests/images/pgadmin/: Dockerfile
Tests/images/phpmyadmin/: Dockerfile
Tests/images/postgres/: Dockerfile
Tests/seed/mssql/: init.sh  seed.sql
Tools/: check_commit_message.py
docs/: changelog.md  conf.py  contributing.md  index.rst  installation.md  quickstart.md  requirements.txt
docs/api/: config.rst  files.rst  index.rst  models.rst  schema.rst  syncdb.rst
docs/user-guide/: configuration.md  data-quality.md  deployment.md  files.md  incremental.md  performance.md  progress.md  schema-evolution.md  secrets.md  syncing.md  transfer-modes.md
