[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "Qubdi-SyncDB"
version = "0.1.0"
description = "ETL helper for moving tabular data between MSSQL, PostgreSQL, MySQL, and local files"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = []

[project.optional-dependencies]
mssql      = ["pyodbc==5.3.0"]
postgres   = ["psycopg2-binary==2.9.11"]
mysql      = ["mysql-connector-python==9.7.0"]
files      = ["pandas==2.3.3", "pyarrow==24.0.0", "openpyxl==3.1.5"]
all        = [
    "pyodbc==5.3.0",
    "psycopg2-binary==2.9.11",
    "mysql-connector-python==9.7.0",
    "pandas==2.3.3",
    "pyarrow==24.0.0",
    "openpyxl==3.1.5",
]
dev        = [
    "pyodbc==5.3.0",
    "psycopg2-binary==2.9.11",
    "mysql-connector-python==9.7.0",
    "pandas==2.3.3",
    "pyarrow==24.0.0",
    "openpyxl==3.1.5",
    "pytest==8.4.2",
]

[tool.setuptools]
packages = ["syncdb", "syncdb.connectors", "syncdb.pipelines"]

[tool.setuptools.package-dir]
"syncdb"            = "Library"
"syncdb.connectors" = "Library/connectors"
"syncdb.pipelines"  = "Library/pipelines"

[tool.pytest.ini_options]
testpaths = [
    "Tests/Library/config",
    "Tests/Library/connectors",
    "Tests/Library/files",
    "Tests/Library/progress",
    "Tests/Library/sql",
    "Tests/Library/sync",
    "Tests/Library/type_mapping",
]
