[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "Qubdi-SyncDB"
version = "1.0.0"
description = "ETL helper for moving tabular data between MSSQL, PostgreSQL, MySQL, and local files"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = []

[project.scripts]
syncdb = "syncdb.cli:main"

[project.optional-dependencies]
mssql      = ["pyodbc>=5.0"]
postgres   = ["psycopg2-binary>=2.9"]
mysql      = ["mysql-connector-python>=9.0"]
files      = ["pandas>=2.0", "pyarrow>=14.0", "openpyxl>=3.1"]
all        = [
    "pyodbc>=5.0",
    "psycopg2-binary>=2.9",
    "mysql-connector-python>=9.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "openpyxl>=3.1",
]
dev        = [
    "pyodbc>=5.0",
    "psycopg2-binary>=2.9",
    "mysql-connector-python>=9.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "openpyxl>=3.1",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools]
packages = ["syncdb", "syncdb.connectors", "syncdb.sync"]

[tool.setuptools.package-dir]
"syncdb"            = "Library"
"syncdb.connectors" = "Library/connectors"
"syncdb.sync"       = "Library/sync"

[tool.pytest.ini_options]
# Single root keeps new test directories discoverable without editing this list.
testpaths = ["Tests/Library"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # line too long — enforced by formatter, not linter
    "B008",   # function calls in default arguments (needed for Enum defaults)
]

[tool.ruff.lint.per-file-ignores]
"Tests/**" = ["E402", "F401", "F811"]

[tool.coverage.run]
source = ["Library"]
omit = ["Tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 90

[tool.mypy]
python_version = "3.10"
strict = true
# Third-party DB drivers and pyarrow/pandas ship without type stubs; treat their
# missing imports as Any rather than failing, while keeping strict checks on our code.
ignore_missing_imports = true
exclude = ["Tests/"]
